@@ -21,6 +21,7 @@ Cacti CHANGELOG
 -feature#3513: Add hooks for plugins to show customize graph source and customize template url
 -feature#3558: Allow copy_user cli script to set various additional fields
 -feature#3585: CLI script to show database permissions that Cacti has
+-feature#3568; Allow exclusion of snmp fields / value(s) when adding graphs via CLI
 -feature#3677: Relocate the delete button for collectors to the edit page
 -feature#3679: Allow searching logs by name, not just id
 
